AC_INIT([cuetools], [1.4.0], [svend@ciffer.net])
AM_INIT_AUTOMAKE([-Wall -Werror -Wno-extra-portability foreign])
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_LEX
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_PROG_YACC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile doc/Makefile src/Makefile src/lib/Makefile src/tools/Makefile extras/Makefile])
AC_OUTPUT
